# WRS-TDRRC-2020SG1

./: CMakeLists.txt  README.md
controller/: CMakeLists.txt  HoseNozzleController2020.cpp
model/: Blasting.body  Blasting250mm.body  Blasting500mm.body  Block2000mm.body  Block250mm.body  CarTS1.body  Dynamite80mm.body  FireCabinetReady.body  FireCabinetTest.body  FullFeaturedFireCabinet.body  HoseConnector.body  JetFan2019.body  L-50-2.0-4.0.body  NozzleConnectionTest.body  Obstacle-L25.body  Obstacle-L50.body  Plate1x1.body  Plate2x2.body  RoadSurface40m_SG2.body  RoadSurface40m_T4.body  TargetTS4_10-400.body  TargetTS4_140-0.body  TargetTS4_35-50-B5.body  TargetTS4_35-50-C3.body  TargetTS4_35-50-F2.body  TargetTS4_35-50-H1.body  TargetTS4_35-50-I4.body  TargetTS4_5-100-L1.body  TargetTS4_5-100-L2.body  TargetTS4_5-100-L3.body  TargetTS4_5-100-L4.body  TargetTS4_5-100-U1.body  TargetTS4_5-100-U2.body  TargetTS4_5-100-U3.body  TargetTS4_5-100-U4.body  TargetTS4_5-100.body  TerrainSG-Capsule5x5m.body  TerrainTS-Capsule5x5m.body  Terrain_sloop_M_SG2.body  Terrain_sloop_SG2.body  (+3 more)
project/: SG1L.cnoid  SG1M.cnoid  SG2.cnoid
script/: CMakeCache.txt  SG1L-AizuSpiderSA-ROS.py  SG1L-AizuSpiderSA.py  SG1L-AizuSpiderSS-ROS.py  SG1L-AizuSpiderSS.py  SG1L-DoubleArmV7A-ROS.py  SG1L-DoubleArmV7A.py  SG1L-DoubleArmV7S-ROS.py  SG1L-DoubleArmV7S.py  SG1L-Quadcopter-ROS.py  SG1L-Quadcopter.py  SG1L-WAREC1.py  SG1M-AizuSpiderSA-ROS.py  SG1M-AizuSpiderSA.py  SG1M-AizuSpiderSS-ROS.py  SG1M-AizuSpiderSS.py  SG1M-DoubleArmV7A-ROS.py  SG1M-DoubleArmV7A.py  SG1M-DoubleArmV7S-ROS.py  (+17 more)
(+17 files in other folders)
